<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_clouds"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/place_xml_textview_find_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:text="@string/place_xml_textview_find_str"
        android:textColor="#000000"
        android:textStyle="bold" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	
	    <EditText
	        android:id="@+id/place_xml_edittext_search"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:drawSelectorOnTop="true"
	        android:gravity="center"
	        android:background="@drawable/edit_text_border_selector"
	        android:singleLine="true"
	        android:textColor="@drawable/edit_text_font_color_selector" >
	    </EditText>
	    
	    <Button
	        android:id="@+id/place_xml_button_refresh"
	        style="@style/TreasureButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:enabled="false" 
	        android:text="@string/place_xml_button_refresh_str" />
    
	</LinearLayout>

    <TextView
        android:id="@+id/place_xml_textview_search_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:textColor="#000000"
        android:text="@string/place_xml_textview_nearby_str"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/place_xml_listview_places"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white" >
    </ListView>

</LinearLayout>